feat(glaze-firing): integrate employee usage tracking